# Rectangles

./: CMakeLists.txt  README.md  main.cpp
docs/src/: jacobian_calculation_2D.pptx  rectangle_calculation_2D.pptx
